force-app/main/default/objects/vlocity_ins__QuoteLineItemRelationship__c/fields/vlocity_ins__Action__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Action__c</fullName>
    <description>The action desired for this relationship with values of Add, Delete or Existing. Existing means no change is requested. Add is a request to add the relationship. Delete is a request to remove it.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>