force-app/main/default/objects/vlocity_ins__QuoteLineItemRelationship__c/fields/vlocity_ins__QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__QuoteLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Product</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Product Relationships</relationshipLabel>
    <relationshipName>QuoteLineItemRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>