force-app/main/default/objects/vlocity_ins__QuoteLineItemRelationship__c/fields/vlocity_ins__RelatedQuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RelatedQuoteLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Quote Product</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Product Relationships (Related Quote Product)</relationshipLabel>
    <relationshipName>RelatedQuoteLineItemRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>